--- a/css/responsive.css
+++ b/css/responsive.css
@@ -20,6 +20,11 @@
     font-size: 15px;
   }
 }
+@media screen and (max-width: 991px) {
+  section.trusted .trusted-inner .trusted-col {
+    height: auto;
+  }
+}
 @media screen and (max-width: 992px) {
   /*header start*/
   .site-nav {
@@ -164,6 +169,12 @@
   button.accordion-button.collapsed,
   button.accordion-button {
     font-size: 18px;
+  }
+  .collection-wrapper.onecess .row {
+    flex-direction: column-reverse;
+  }
+  section.collection-hotels .collection-wrapper .collection-about-photo img {
+    height: 250px;
   }
 }
 @media screen and (max-width: 575px) {
