--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,18 +1,33 @@
 $breakpoints: (
-xs :395px,    
-sm :575px,
-md: 768px,
-lg: 992px,
-xl:1024px,
-xxl:1400px,
+    xs :395px,
+    sm :575px,
+    md: 768px,
+    lg: 992px,
+    xl:1024px,
+    xxl:1400px,
 );
 
 @mixin mq($mq-breakpoint, $mq-breakpoints: $breakpoints) {
-@if map-has-key($mq-breakpoints, $mq-breakpoint) {
- $mq-breakpoint: map-get($mq-breakpoints, $mq-breakpoint);
-}
- @media screen and (max-width: #{$mq-breakpoint}) {
- @content;
-}
+    @if map-has-key($mq-breakpoints, $mq-breakpoint) {
+        $mq-breakpoint: map-get($mq-breakpoints, $mq-breakpoint);
+    }
+
+    @media screen and (max-width: #{$mq-breakpoint}) {
+        @content;
+    }
 }
 
+@mixin bg-innr-pro {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: bottom;
+    object-fit: cover;
+    margin-top: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: 500px;
+    position: relative;
+}
