--- a/scss/responsive.scss
+++ b/scss/responsive.scss
@@ -27,11 +27,7 @@
     }
 }
 
-@media screen and (max-width: 991px) {
-    section.trusted .trusted-inner .trusted-col {
-        height: auto;
-    }
-}
+
 
 @media screen and (max-width: 992px) {
 
@@ -196,6 +192,21 @@
         img {
             height: 100%;
         }
+    }
+}
+
+@media screen and (max-width: 991px) {
+    section.trusted .trusted-inner .trusted-col {
+        height: auto;
+    }
+
+    .form_div {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .touch {
+        margin-top: 40px;
     }
 }
 
