--- a/css/style.css
+++ b/css/style.css
@@ -590,7 +590,6 @@ section.hotel-bnr::after {
 section.trusted {
   background: url(../images/about-bg.jpg) center top no-repeat fixed;
   background-size: cover;
-  padding: 60px 0 40px 0;
   position: relative;
   padding: 50px 0;
   z-index: 99;
@@ -844,6 +843,36 @@ section.hotel-bnr.about {
   padding: 9px;
   margin: 0 10px;
   color: #fff;
+}
+
+section.hotel-bnr.resorts {
+  background: url(../images/Resorts.avif);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: bottom;
+  object-fit: cover;
+  margin-top: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  height: 500px;
+  position: relative;
+}
+
+body#resorts section.trusted .trusted-wrapper h3 {
+  margin-bottom: 0;
+}
+
+body#resorts .trusted-wrapper p {
+  margin-bottom: 30px;
+  padding-bottom: 30px;
+  text-align: center;
+}
+
+.trustedmate.malton {
+  margin-top: 50px;
 }
 
 
