--- a/scss/style.scss
+++ b/scss/style.scss
@@ -584,7 +584,6 @@ section.hotel-bnr {
 section.trusted {
     background: url(../images/about-bg.jpg) center top no-repeat fixed;
     background-size: cover;
-    padding: 60px 0 40px 0;
     position: relative;
     padding: 50px 0;
     z-index: 99;
@@ -868,6 +867,26 @@ section.hotel-bnr.about {
             color: #fff;
         }
     }
+}
+
+// 
+section.hotel-bnr.resorts {
+    background: url(../images/Resorts.avif);
+    @include bg-innr-pro;
+}
+
+body#resorts section.trusted .trusted-wrapper h3 {
+    margin-bottom: 0;
+}
+
+body#resorts .trusted-wrapper p {
+    margin-bottom: 30px;
+    padding-bottom: 30px;
+    text-align: center;
+}
+
+.trustedmate.malton {
+    margin-top: 50px;
 }
 
 /*# sourceMappingURL=style.css.map */
