--- a/css/style.css
+++ b/css/style.css
@@ -202,6 +202,7 @@ section.homebanner {
   justify-content: center;
   align-items: center;
   text-align: center;
+  overflow: hidden;
 }
 section.homebanner::before {
   position: absolute;
@@ -228,6 +229,7 @@ section.homebanner::before {
 /*websitework-css-start*/
 section.websitework {
   padding: 30px 0;
+  overflow: hidden;
 }
 
 .websitework-content span {
@@ -576,6 +578,7 @@ section.hotel-bnr {
   text-align: center;
   height: 500px;
   position: relative;
+  overflow: hidden;
 }
 section.hotel-bnr::after {
   content: "";
@@ -877,6 +880,10 @@ body#resorts .trusted-wrapper p {
 
 .trustedmate.malton {
   margin-top: 50px;
+}
+
+body#resorts .dropdown__section {
+  margin-top: 3rem;
 }
 
 
