--- a/scss/style.scss
+++ b/scss/style.scss
@@ -726,6 +726,7 @@ section.hotel-bnr.game {
 
 section.game-description {
     padding: 50px 0;
+    overflow: hidden;
 
     .game-description-one {
         p {
@@ -794,6 +795,7 @@ section.hotel-bnr.about {
 // contact page css
 .conatct-page {
     padding: 50px;
+    overflow: hidden;
 
     .contact_us_f {
 
