--- a/scss/responsive.scss
+++ b/scss/responsive.scss
@@ -227,6 +227,10 @@
     section.collection-hotels .collection-wrapper .collection-about-photo img {
         height: 250px;
     }
+
+    .row.cuisine {
+        padding: 0px 0 30px;
+    }
 }
 
 @media screen and (max-width:575px) {
