--- a/scss/style.scss
+++ b/scss/style.scss
@@ -925,4 +925,8 @@ a.knsl-btn:hover {
     margin-top: 50px;
 }
 
+section.game-description .game-description-one span {
+    padding: 16px;
+}
+
 /*# sourceMappingURL=style.css.map */
